--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
+        "sass": "^1.43.4",
+        "sass-loader": "^12.3.0",
         "vue-loader": "^15.9.8",
         "vue-template-compiler": "^2.6.14"
     },
@@ -21,6 +23,8 @@
         "@inertiajs/inertia": "^0.10.1",
         "@inertiajs/inertia-vue": "^0.7.2",
         "vue": "^2.6.14",
-        "vuetify": "^2.5.10"
+        "vue-i18n": "^8.26.5",
+        "vuetify": "^2.5.10",
+        "vuex": "^3.6.2"
     }
 }
